# humanizer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
cloud/: .gitignore  README.md  active_rescue.sh  auto_heldout.sh  build_dataset_v8.py  build_dataset_v9.py  client.ts  cost_cap.sh  early_kill.sh  eval-r3.json  filter_dataset_v10.py  heldout_eval.py  launch.ts  monitor.ts  package.json  provision.ts  run_heldout.ts  run_scrub_eval.ts  runpod.ts  score_r6b_pangram.py  serve.ts  ssh.ts  train.py  train_v3.py  train_v4.py  train_v5.py  train_v6.py  train_v8.py  tsconfig.json  types.ts  watch_r5_complete.sh  worker.py
cloud/legacy/: heldout_eval.py  queue_run2.sh  run_heldout.ts  run_scrub_eval.ts  scrub_score_eval.py  train.py  train_v2.py  train_v3.py  train_v4.py  train_v5.py  train_v6.py  train_v7.py
examples/: quickstart.py  rejection_sampling.py
examples/demo/: README.md  index.html
experiments/: README.md  eval_base_vs_rl.py  eval_best_of_n.py  train_rl_smollm.py
experiments/cloud/: README.md  modal_train.py
experiments/run-001/: FINDINGS.md  eval_base_vs_rl.json  eval_best_of_n.json  training_log.jsonl
humanizer/: __init__.py  cli.py  eval.py
scripts/: bench_rejection.py  benchmark.py  eval.py  headline_benchmark.py  train_grpo.py  train_sft.py
tests/: test_detectors.py  test_facts.py  test_judge.py  test_paid_detectors.py  test_patterns.py  test_pipeline.py  test_postprocess.py  test_rejection.py  test_scrub.py  test_scrub_advanced.py  test_scrub_safety.py  test_service.py
(+56 files in other folders)
